Some style fixes for project navbar on narrow screens

--- a/views/stylesheets/project.css
+++ b/views/stylesheets/project.css
@@ -4,11 +4,6 @@ html, body {
   overflow: hidden;
 }
 
-
-#new-tuple{
-  margin: 0 auto;
-}
-
 .button{
   margin: 0 auto;
 }
